@@ -1,13 +1,15 @@
 import java.util.ArrayList;
 
 public class Instrumento {
+    //Atributos de la clase Instrumento
     String nombre, tipo, condicion, funcionalidad, cita;
     ArrayList<String> autores;
     int confiabilidad, clave;
 
+    //Constructor de la clase Instrumento
     public Instrumento(String nombre, String tipo, String condicion, String funcionalidad, String cita, ArrayList<String> autores, int confiabilidad, int clave) {
         this.nombre = nombre;
-        this.tipo = tipo;
+        this.tipo = tipo; //Test, escala o cuestionario
         this.condicion = condicion; //Estres, ansiedad o ambos
         this.funcionalidad = funcionalidad; //Identificar o manejar
         this.cita = cita;
@@ -16,6 +18,7 @@ public class Instrumento {
         this.clave = clave;
     }
 
+    //Getters y setters de algunos atributos
     public String getCondicion() {
         return condicion;
     }
@@ -36,22 +39,6 @@ public class Instrumento {
         return confiabilidad;
     }
 
-    public String versionArchivo(){
-        return nombre + "," + tipo + "," + condicion + "," + funcionalidad + "," + cita + "," + autores +
-                "," + confiabilidad + "," + clave;
-    }
-
-    public String toString() {
-        String confiabilidadString = "";
-        if(this.confiabilidad==1){
-            confiabilidadString = "Confiable";
-        }else{
-            confiabilidadString = "No confiable";
-        }
-        return "Nombre: "+nombre + "\n" + "Tipo: " + tipo + "\n" + "Condición: " + condicion + "\n" + "Funcionalidad: " + funcionalidad + "\n" + "Lugar de cita: " + cita + "\n"
-                + "Autores: " + autores + "\n" + "Confiablidad: " + confiabilidadString + "\n" + "Clave: " + clave;
-    }
-
     public int getClave() {
         return clave;
     }
@@ -61,6 +48,24 @@ public class Instrumento {
     }
 
     public String getPrimerAutor(){
-        return autores.get(0);
+        return autores.getFirst();
+    }
+
+    //Versión para agregar al archivo de texto
+    public String versionArchivo(){
+        return nombre + "," + tipo + "," + condicion + "," + funcionalidad + "," + cita + "," + autores +
+                "," + confiabilidad + "," + clave;
+    }
+
+    //Versión para mostrar en los JOptionPane
+    public String toString() {
+        String confiabilidadString = "";
+        if(this.confiabilidad==1){
+            confiabilidadString = "Confiable";
+        }else{
+            confiabilidadString = "No confiable";
+        }
+        return "Nombre: "+nombre + "\n" + "Tipo: " + tipo + "\n" + "Condición: " + condicion + "\n" + "Funcionalidad: " + funcionalidad + "\n" + "Lugar de cita: " + cita + "\n"
+                + "Autores: " + autores + "\n" + "Confiablidad: " + confiabilidadString + "\n" + "Clave: " + clave;
     }
 }
